--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/terasa/images.git"
+  },
   "keywords": [
     "tmp"
   ],
   "author": "iksinski",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/terasa/images/issues"
+  },
+  "homepage": "https://github.com/terasa/images#readme"
 }
