--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@teresa/mypackage",
+  "name": "@terasa/mypackage",
   "version": "1.0.0",
   "description": "desc",
   "main": "index.js",
